updated DZCitron link to XDA

--- a/app/src/main/res/values/translators_list.xml
+++ b/app/src/main/res/values/translators_list.xml
@@ -13,7 +13,7 @@
         10. čeština (Czech) - <a href="http://forum.xda-developers.com/member.php?u=7055520">NutellaOrDidntHappen@XDA</a>\n
         11. Deutsche (German) - <a href="http://forum.xda-developers.com/member.php?u=5645136">knistertoni@XDA</a>\n
         12. português (Portuguese) - <a href="http://forum.xda-developers.com/member.php?u=2161433">sindamc@XDA</a>\n
-        13. français (French) - <a href="http://forum.xda-developers.com/member.php?u=6800171">DevelRox@XDA</a>, dzcitron\n
+        13. français (French) - <a href="http://forum.xda-developers.com/member.php?u=6800171">DevelRox@XDA</a>, <a href="http://forum.xda-developers.com/member.php?u=7211439">DZCitorn@XDA</a>\n
         14. српски (Serbian) - <a href="http://forum.xda-developers.com/member.php?u=4165001">SDee96@XDA</a>\n
         15. Lietuvos (Lithuanian) - <a href="http://forum.xda-developers.com/member.php?u=7162352">theteodorgly@XDA</a>\n
         16. eesti (Estonian) - <a href="http://forum.xda-developers.com/member.php?u=5891339">RometVinnal@XDA</a>\n
