--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorIndigo500</item>
-        <item name="colorPrimaryDark">@color/colorIndigo700</item>
-        <item name="colorAccent">@color/colorPinkA200</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
         <item name="colorControlNormal">@color/colorWhite</item>
         <item name="colorControlActivated">@color/colorGreen400</item>
