added Navigation bar color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
 
         <item name="android:colorForeground">@color/colorGrey400</item>
 
+        <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
         <item name="preferenceTheme">@style/MyPreferenceTheme</item>
     </style>
 
