--- a/app/src/main/res/values/translators_list.xml
+++ b/app/src/main/res/values/translators_list.xml
@@ -21,5 +21,6 @@
         18. bahasa Indonesia (Indonesian) - <a href="http://forum.xda-developers.com/member.php?u=3744901">sammymaddog@XDA</a>\n
         19. 한국어 (Korean) - <a href="http://forum.xda-developers.com/member.php?u=5815168">ideaman924@XDA</a>\n
         20. Magyar (Hungarian) - <a href="http://forum.xda-developers.com/member.php?u=6152880">gyulusboy@XDA</a>\n
+        21. ქართული (Georgian) - <a href="http://forum.xda-developers.com/member.php?u=5642246">DroidTwe4kz@XDA</a>\n
     </string>
 </resources>
