--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="48dp"
     android:background="?selectableItemBackground"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:padding="8dp"
     android:text="Hello"
     android:textSize="16sp" />
