Added Romanian to the list

--- a/app/src/main/res/values/translators_list.xml
+++ b/app/src/main/res/values/translators_list.xml
@@ -40,5 +40,6 @@
         19. 한국어 (Korean) - <a href="http://forum.xda-developers.com/member.php?u=5815168">ideaman924@XDA</a>\n
         20. Magyar (Hungarian) - <a href="http://forum.xda-developers.com/member.php?u=6152880">gyulusboy@XDA</a>\n
         21. ქართული (Georgian) - <a href="http://forum.xda-developers.com/member.php?u=5642246">DroidTwe4kz@XDA</a>\n
+        22. român (Romanian) - <a href="http://forum.xda-developers.com/member.php?u=1334196">cr4ck3dn@XDA</a>\n
     </string>
 </resources>
